--- a/index.html
+++ b/index.html
@@ -480,7 +480,8 @@
                 </div>
             </div>
             <div class="text-center mt-8">
-                <p>© 2023 شركة التوصيلات والسياحة. جميع الحقوق محفوظة.</p>
+                <p>© <span id="year"></span> شركة التوصيلات والسياحة. جميع الحقوق محفوظة.</p>
+                <p>تصميم عبد الرحمن عامر قاطن</p>
             </div>
         </div>
     </footer>
@@ -593,6 +594,9 @@
             sidebar.classList.toggle('open');
             overlay.classList.toggle('active');
         }
+        const currentYear = new Date().getFullYear();
+        // ضع السنة في العنصر المناسب
+        document.getElementById('year').textContent = currentYear;
     </script>
 </body>
 
