Edit name of devloper

--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
             </div>
             <div class="text-center mt-8">
                 <p>© <span id="year"></span> شركة التوصيلات والسياحة. جميع الحقوق محفوظة.</p>
-                <p>تصميم عبد الرحمن عامر قاطن</p>
+                <p>تصميم عبد الرحمن قاطن</p>
             </div>
         </div>
     </footer>
