Edit in color of button

--- a/index.html
+++ b/index.html
@@ -564,6 +564,7 @@
             });
             document.querySelectorAll('button, a.bg-blue-600').forEach(element => {
                 element.style.backgroundColor = color;
+                element.style.color = "#ffffff";
             });
             document.getElementById('colorOptions').style.display = 'none';
         }
