Edit padding for mobile design

--- a/index.html
+++ b/index.html
@@ -196,9 +196,9 @@
             padding-top: 100px !important;
         }
 
-        @media max-width(780px) {
+        @media (max-width: 768px) {
             section {
-                padding-top: 200px !important;
+                padding-top: 150px !important;
             }
         }
     </style>
