Edit design of sidebar

--- a/index.html
+++ b/index.html
@@ -268,15 +268,23 @@
                 </svg>
             </button>
             <nav class="mt-4">
-                <a href="#hero" class="block py-2 text-gray-700 hover:text-blue-600">الرئيسية</a>
-                <a href="#about" class="block py-2 text-gray-700 hover:text-blue-600">من نحن</a>
-                <a href="#services" class="block py-2 text-gray-700 hover:text-blue-600">الخدمات</a>
-                <a href="#team" class="block py-2 text-gray-700 hover:text-blue-600">فريق العمل</a>
-                <a href="#testimonials" class="block py-2 text-gray-700 hover:text-blue-600">آراء العملاء</a>
-                <a href="#blog" class="block py-2 text-gray-700 hover:text-blue-600">مدونة</a>
-                <a href="#faq" class="block py-2 text-gray-700 hover:text-blue-600">الأسئلة الشائعة</a>
-                <a href="#offers" class="block py-2 text-gray-700 hover:text-blue-600">العروض الخاصة</a>
-                <a href="#contact" class="block py-2 text-gray-700 hover:text-blue-600">اتصل بنا</a>
+                <a href="#hero" class="block py-2 text-gray-700 hover:text-blue-600"
+                    onclick="toggleSidebar()">الرئيسية</a>
+                <a href="#about" class="block py-2 text-gray-700 hover:text-blue-600" onclick="toggleSidebar()">من
+                    نحن</a>
+                <a href="#services" class="block py-2 text-gray-700 hover:text-blue-600"
+                    onclick="toggleSidebar()">الخدمات</a>
+                <a href="#team" class="block py-2 text-gray-700 hover:text-blue-600" onclick="toggleSidebar()">فريق
+                    العمل</a>
+                <a href="#testimonials" class="block py-2 text-gray-700 hover:text-blue-600"
+                    onclick="toggleSidebar()">آراء العملاء</a>
+                <a href="#blog" class="block py-2 text-gray-700 hover:text-blue-600" onclick="toggleSidebar()">مدونة</a>
+                <a href="#faq" class="block py-2 text-gray-700 hover:text-blue-600" onclick="toggleSidebar()">الأسئلة
+                    الشائعة</a>
+                <a href="#offers" class="block py-2 text-gray-700 hover:text-blue-600" onclick="toggleSidebar()">العروض
+                    الخاصة</a>
+                <a href="#contact" class="block py-2 text-gray-700 hover:text-blue-600" onclick="toggleSidebar()">اتصل
+                    بنا</a>
             </nav>
         </div>
     </div>
