--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <!-- <script src="tailwind.js"></script> -->
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="travel.png" type="image/x-icon">
     <style>
         /* أنماط عامة */
         * {
