Add new member to team

--- a/index.html
+++ b/index.html
@@ -334,6 +334,12 @@
             <div class="bg-white p-6 rounded-lg shadow-lg text-center animate-on-scroll">
                 <img src="https://demonslayer-hinokami.sega.com/img/characters/tmb-tanjiro.png" alt="فريق العمل"
                     class="mx-auto mb-4 rounded-full h-40 w-40">
+                <h3 class="text-xl font-bold mb-2">مصطفى علي</h3>
+                <p class="text-gray-700">مطور تطبيقات</p>
+            </div>
+            <div class="bg-white p-6 rounded-lg shadow-lg text-center animate-on-scroll">
+                <img src="https://demonslayer-hinokami.sega.com/img/characters/tmb-tanjiro.png" alt="فريق العمل"
+                    class="mx-auto mb-4 rounded-full h-40 w-40">
                 <h3 class="text-xl font-bold mb-2">سارة علي</h3>
                 <p class="text-gray-700">مديرة التسويق</p>
             </div>
