Add cario font to page

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
         <!-- أداة اختيار الألوان -->
         <div class="color-picker-container">
-            <div class="color-picker-icon rounded" onclick="toggleColorOptions()">
+            <div class="color-picker-icon" onclick="toggleColorOptions()">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
                     stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                     <path d="M12 2.69l5.66 5.66a8 8 0 1 1-11.31 0L12 2.69z" />
@@ -51,7 +51,7 @@
         <div class="container mx-auto px-4 sm:px-6 py-4 flex items-center sm:flex-row justify-between items-center">
             <div id="brand" class="text-2xl font-bold text-blue-600 sm:mb-0">شركة التوصيلات والسياحة</div>
             <!-- زر فتح الـ sidebar -->
-            <button class="sm:hidden p-2 text-gray-700 bg-blue-600 text-white" onclick="toggleSidebar()">
+            <button class="sm:hidden p-2 text-gray-700 bg-blue-600 text-white rounded" onclick="toggleSidebar()">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
                     stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                     <path d="M3 12h18M3 6h18M3 18h18" />
