--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 </svg>
             </div>
             <div class="color-options" id="colorOptions">
-                <div class="color-option bg-blue-600" onclick="changeColor('#3B82F6')"></div>
+                <div class="color-option bg-blue-600" onclick="changeColor('#2563eb')"></div>
                 <div class="color-option bg-green-600" onclick="changeColor('#10B981')"></div>
                 <div class="color-option bg-purple-600" onclick="changeColor('#8B5CF6')"></div>
                 <div class="color-option bg-red-600" onclick="changeColor('#EF4444')"></div>
@@ -112,7 +112,7 @@
     <section id="hero" class="bg-cover bg-center h-96"
         style="background-image: url('https://i.pinimg.com/474x/04/14/87/0414874d9c531d082636ffcb37b217da.jpg');">
         <div class="container mx-auto px-4 sm:px-6 py-20 text-white text-center">
-            <h1 class="text-3xl sm:text-5xl font-bold mb-4 animate-on-scroll">اكتشف العالم معنا</h1>
+            <h1 class="text-3xl sm:text-5xl font-bold mb-4 animate-on-scroll text-blue-600">اكتشف العالم معنا</h1>
             <p class="text-lg sm:text-xl mb-8 animate-on-scroll">نقدم أفضل خدمات التوصيل والرحلات السياحية بأسعار
                 تنافسية.</p>
             <a href="#" class="bg-blue-600 text-white px-6 py-3 rounded-lg hover:bg-blue-700 animate-on-scroll">احجز
