--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
                 </svg>
             </div>
             <div class="color-options" id="colorOptions">
-                <div class="color-option bg-blue-600" onclick="changeColor('#2563eb')"></div>
-                <div class="color-option bg-green-600" onclick="changeColor('#10B981')"></div>
-                <div class="color-option bg-purple-600" onclick="changeColor('#8B5CF6')"></div>
-                <div class="color-option bg-red-600" onclick="changeColor('#EF4444')"></div>
-                <div class="color-option bg-yellow-500" onclick="changeColor('#F59E0B')"></div>
-                <div class="color-option bg-pink-500" onclick="changeColor('#EC4899')"></div>
+                <div class="color-option bg-[#2563eb]" onclick="changeColor('#2563eb')"></div>
+                <div class="color-option bg-[#10B981]" onclick="changeColor('#10B981')"></div>
+                <div class="color-option bg-[#8B5CF6]" onclick="changeColor('#8B5CF6')"></div>
+                <div class="color-option bg-[#EF4444]" onclick="changeColor('#EF4444')"></div>
+                <div class="color-option bg-[#F59E0B]" onclick="changeColor('#F59E0B')"></div>
+                <div class="color-option bg-[#EC4899]" onclick="changeColor('#EC4899')"></div>
             </div>
         </div>
     </div>
