--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
             <!-- الـ navigation bar للأجهزة الكبيرة -->
             <nav class="hidden sm:flex space-x-4">
                 <a href="#hero" class="nav-link text-gray-700 hover:text-blue-600">الرئيسية</a>
+                <!-- <a href="#about" class="nav-link text-gray-700 hover:text-blue-600">من نحن</a> -->
                 <a href="#about" class="nav-link text-gray-700 hover:text-blue-600">من نحن</a>
-                <a href="#services" class="nav-link text-gray-700 hover:text-blue-600">الخدمات</a>
                 <a href="#team" class="nav-link text-gray-700 hover:text-blue-600">فريق العمل</a>
                 <a href="#testimonials" class="nav-link text-gray-700 hover:text-blue-600">آراء العملاء</a>
                 <a href="#blog" class="nav-link text-gray-700 hover:text-blue-600">مدونة</a>
@@ -87,8 +87,8 @@
                     onclick="toggleSidebar()">الرئيسية</a>
                 <a href="#about" class="block py-2 hover:text-blue-600 hover:font-bold" onclick="toggleSidebar()">من
                     نحن</a>
-                <a href="#services" class="block py-2 hover:text-blue-600 hover:font-bold"
-                    onclick="toggleSidebar()">الخدمات</a>
+                <!-- <a href="#services" class="block py-2 hover:text-blue-600 hover:font-bold"
+                    onclick="toggleSidebar()">الخدمات</a> -->
                 <a href="#team" class="block py-2 hover:text-blue-600 hover:font-bold" onclick="toggleSidebar()">فريق
                     العمل</a>
                 <a href="#testimonials" class="block py-2 hover:text-blue-600 hover:font-bold"
