--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
                     <ul>
                         <li><a href="#hero" class="hover:text-blue-600">الرئيسية</a></li>
                         <li><a href="#about" class="hover:text-blue-600">من نحن</a></li>
-                        <li><a href="#services" class="hover:text-blue-600">الخدمات</a></li>
+                        <li><a href="#team" class="hover:text-blue-600">فريق العمل</a></li>
                         <li><a href="#contact" class="hover:text-blue-600">اتصل بنا</a></li>
                     </ul>
                 </div>
