--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     </link>
     <!-- <link href="https://cdn.jsdelivr.net/npm/tailwindcss@3.3.3/dist/tailwind.min.css" rel="stylesheet"> -->
     <!-- <script src="tailwind.js"></script> -->
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="travel.png" type="image/x-icon">
@@ -143,7 +142,7 @@
     <section id="team" class="container mx-auto px-4 sm:px-6 py-12">
         <h2 class="text-2xl sm:text-3xl font-bold text-center mb-8 animate-on-scroll">فريق العمل</h2>
         <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6">
-            <div class="bg-white p-6 rounded-lg shadow-lg text-center" data-aos="fade-right">
+            <div class="bg-white p-6 rounded-lg shadow-lg text-center animate-on-scroll">
                 <img src="https://demonslayer-hinokami.sega.com/img/characters/tmb-tanjiro.png" alt="فريق العمل"
                     class="mx-auto mb-4 rounded-full h-40 w-40">
                 <h3 class="text-xl font-bold mb-2">أحمد محمد</h3>
