--- a/index.html
+++ b/index.html
@@ -114,7 +114,9 @@
     <section id="hero" class="bg-cover bg-center h-96"
         style="background-image: url('https://cloudclass.netlify.app/img01.jpg');">
         <div class="container mx-auto px-4 sm:px-6 py-20 text-white text-center">
-            <h1 class="text-3xl sm:text-5xl font-bold mb-4 animate-on-scroll text-blue-600">اكتشف العالم معنا</h1>
+            <div class="container">
+                <h1 id="typed-text"></h1>
+            </div>
             <p class="text-lg sm:text-xl mb-8 animate-on-scroll">نقدم أفضل خدمات التوصيل والرحلات السياحية بأسعار
                 تنافسية.</p>
             <a href="#" class="bg-blue-600 text-white px-6 py-3 rounded-lg hover:bg-blue-700 animate-on-scroll">احجز
