Edit tag of typing animation

--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
             <div class="container">
                 <h1 id="typed-text" class="text-3xl sm:text-xl font-bold mb-4 animate-on-scroll text-blue-600 inline-block">اكتشف العالم معنا</h1>
             </div>
-            <span class="text-lg sm:text-xl mb-8 animate-on-scroll">نقدم أفضل خدمات التوصيل والرحلات السياحية بأسعار
-                تنافسية.</span>
+            <p class="text-lg sm:text-xl mb-8 animate-on-scroll">نقدم أفضل خدمات التوصيل والرحلات السياحية بأسعار
+                تنافسية.</p>
             <a href="#" class="bg-blue-600 text-white px-6 py-3 rounded-lg hover:bg-blue-700 animate-on-scroll">احجز
                 الآن</a>
         </div>
