--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         style="background-image: url('https://cloudclass.netlify.app/img01.jpg');">
         <div class="container mx-auto px-4 sm:px-6 py-20 text-white text-center">
             <div class="container">
-                <h1 id="typed-text" class="text-3xl sm:text-xl font-bold mb-4 animate-on-scroll text-blue-600 inline-block">اكتشف العالم معنا</h1>
+                <h1 id="typed-text" class="text-3xl sm:text-xl font-bold mb-4 animate-on-scroll text-blue-600 inline-block"></h1>
             </div>
             <div class="text-lg sm:text-xl mb-8 animate-on-scroll">نقدم أفضل خدمات التوصيل والرحلات السياحية بأسعار
                 تنافسية.</div>
